Fix alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -117,18 +117,18 @@ h1 {
     transform: translateY(-30px);
 }
 
-.pointer {
+.turn-indicator {
     position: fixed;
     width: 80px;
     height: 10px;
-    transform: translate3d(55px, -70px, 0);
+    transform: translate3d(49px, -70px, 0);
     background-color: $base-color;
     transition-duration: 0.5s;
     transition-timing-function: ease-in-out;
 }
 
 .change {
-    transform: translate3d(180px, -70px, 0);
+    transform: translate3d(167px, -70px, 0);
 }
 
 .restart-button {
